:bug: :lipstick: Fix "constraints" enabling horizontal scroll

--- a/src/components/ConstraintsSection/styles.scss
+++ b/src/components/ConstraintsSection/styles.scss
@@ -7,6 +7,8 @@ $scene-height: 550px;
   height: 100vh;
   background-color: #000;
   width: 100%;
+  max-width: 100%;
+  overflow: hidden;
   padding-top: $padding;
 }
 
